unpackaged/main/default/objects/Open_Enrollment__c/Open_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Open Enrollment</label>
    <nameField>
        <displayFormat>OE-{00000}</displayFormat>
        <label>Open Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>