unpackaged/main/default/objects/Open_Enrollment__c/fields/Accepted_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Enrollment__c</fullName>
    <label>Accepted Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NA_NO_Yes</valueSetName>
    </valueSet>
</CustomField>