unpackaged/main/default/objects/Open_Enrollment__c/fields/Agency_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agency_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agency, Partner, Other, EDI Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Enrollments</relationshipLabel>
    <relationshipName>Renewal_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>