unpackaged/main/default/objects/Open_Enrollment__c/fields/Asset_Initial_Eligibles__c.field-meta.xml
<CustomField>
    <fullName>Asset_Initial_Eligibles__c</fullName>
    <formula>Related_Asset__r.Initial_Eligibles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Initial Eligibles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>