unpackaged/main/default/objects/Open_Enrollment__c/fields/Current_Asset_Active__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Active__c</fullName>
    <formula>Related_Asset__r.Active_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current_Asset_Active</label>
    <type>Checkbox</type>
</CustomField>