unpackaged/main/default/objects/Open_Enrollment__c/fields/Enrollment_Capture_Method__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Capture_Method__c</fullName>
    <label>Enrollment Capture Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Account Rep</fullName>
            </value>
            <value>
                <fullName>Blue Rep</fullName>
            </value>
            <value>
                <fullName>Broker/Agent</fullName>
            </value>
            <value>
                <fullName>Enroller</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>TSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>