unpackaged/main/default/objects/Open_Enrollment__c/fields/Enrollment_Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Master_Group__c</fullName>
    <formula>Case__r.Master_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Master Group</label>
    <type>Text</type>
</CustomField>