unpackaged/main/default/objects/Open_Enrollment__c/fields/Enrollment_Platform__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Platform__c</fullName>
    <label>Enrollment Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AccessAble</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Selerix</fullName>
            </value>
            <value>
                <fullName>Spreadsheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>