unpackaged/main/default/objects/Open_Enrollment__c/fields/Enrollment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Start Date</label>
    <type>Date</type>
</CustomField>