unpackaged/main/default/objects/Open_Enrollment__c/fields/Final_Eligables__c.field-meta.xml
<CustomField>
    <fullName>Final_Eligables__c</fullName>
    <label>Final Eligible Lives</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>