unpackaged/main/default/objects/Open_Enrollment__c/fields/Final_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Final_Enrolled__c</fullName>
    <label>Final Enrolled Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>