unpackaged/main/default/objects/Open_Enrollment__c/fields/Final_Participation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Final_Participation_Percent__c</fullName>
    <formula>IF ( Final_Eligables__c &gt; 0, Final_Enrolled__c /  Final_Eligables__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Participation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>