unpackaged/main/default/objects/Open_Enrollment__c/fields/Final_Spouse_Premium__c.field-meta.xml
<CustomField>
    <fullName>Final_Spouse_Premium__c</fullName>
    <label>Final Spouse Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>