unpackaged/main/default/objects/Open_Enrollment__c/fields/Master_Group_State__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_State__c</fullName>
    <formula>Case__r.MG_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Group State</label>
    <type>Text</type>
</CustomField>