unpackaged/main/default/objects/Open_Enrollment__c/fields/Master_GroupID__c.field-meta.xml
<CustomField>
    <fullName>Master_GroupID__c</fullName>
    <formula>Case__r.Master_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master_GroupID</label>
    <type>Text</type>
</CustomField>