unpackaged/main/default/objects/Open_Enrollment__c/fields/MG_Agency__c.field-meta.xml
<CustomField>
    <fullName>MG_Agency__c</fullName>
    <formula>Case__r.Master_Group__r.Sales_Primary_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MG Agency</label>
    <type>Text</type>
</CustomField>