unpackaged/main/default/objects/Open_Enrollment__c/fields/OE_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>OE_Case_Status__c</fullName>
    <formula>TEXT(Case__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OE Case Status</label>
    <type>Text</type>
</CustomField>