unpackaged/main/default/objects/Open_Enrollment__c/fields/Premium_Increase__c.field-meta.xml
<CustomField>
    <fullName>Premium_Increase__c</fullName>
    <formula>IF( Total_Final_Premium__c &gt; 0 ,   Total_Final_Premium__c -   Total_Starting_Premium__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Premium Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>