unpackaged/main/default/objects/Open_Enrollment__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VGTL</fullName>
            </value>
            <value>
                <fullName>VLTD</fullName>
            </value>
            <value>
                <fullName>VSTD</fullName>
            </value>
            <value>
                <fullName>Worksite ACC</fullName>
            </value>
            <value>
                <fullName>Worksite CA &amp; CI</fullName>
            </value>
            <value>
                <fullName>Worksite CI</fullName>
            </value>
            <value>
                <fullName>Worksite HIP</fullName>
            </value>
            <value>
                <fullName>Group Worksite</fullName>
                <isActive>false</isActive>
                <label>Group Worksite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>