unpackaged/main/default/objects/Open_Enrollment__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Active_Formula__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Asset.Name</field>
            <operation>contains</operation>
            <valueField>$Source.Product_Type__c</valueField>
        </filterItems>
        <infoMessage>Enter Account Name Contains to filter by account</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Open Enrollments</relationshipLabel>
    <relationshipName>Renewal_Products</relationshipName>
    <type>Lookup</type>
</CustomField>