unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Dependent_Premium__c.field-meta.xml
<CustomField>
    <fullName>Starting_Dependent_Premium__c</fullName>
    <label>Starting Dependent Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>