unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Eligible_Lives__c.field-meta.xml
<CustomField>
    <fullName>Starting_Eligible_Lives__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting Eligible Lives</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>