unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Enrolled_Lives__c.field-meta.xml
<CustomField>
    <fullName>Starting_Enrolled_Lives__c</fullName>
    <label>Starting Enrolled Lives</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>