unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Participation__c.field-meta.xml
<CustomField>
    <fullName>Starting_Participation__c</fullName>
    <label>Starting Participation</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>