unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Participation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Starting_Participation_Percent__c</fullName>
    <formula>IF ( Starting_Eligible_Lives__c &gt; 0,  Starting_Enrolled_Lives__c / Starting_Eligible_Lives__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Participation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>