unpackaged/main/default/objects/Open_Enrollment__c/fields/Starting_Spouse_Premium__c.field-meta.xml
<CustomField>
    <fullName>Starting_Spouse_Premium__c</fullName>
    <label>Starting Spouse Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>