unpackaged/main/default/objects/Open_Enrollment__c/fields/Total_Final_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Premium__c</fullName>
    <formula>Final_Premium__c + Final_Spouse_Premium__c + Final_Dependent_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Final Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>