unpackaged/main/default/objects/Open_Enrollment__c/fields/Total_Starting_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Starting_Premium__c</fullName>
    <formula>Starting_Premium__c   + Starting_Dependent_Premium__c +  Starting_Spouse_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Starting Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>