unpackaged/main/default/objects/Open_Enrollment__c/validationRules/Only_on_VGTL_Enrollment_Per_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_on_VGTL_Enrollment_Per_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Case__r.Renewal_VGTL_Count__c  = 1,
ISNEW(),    ISPICKVAL(Product_Type__c, &quot;VGTL&quot;) 
)</errorConditionFormula>
    <errorMessage>OE001 - The case currently has a VGTL Renewal Enrollment, please navigate to the existing record and select edit.</errorMessage>
</ValidationRule>