unpackaged/main/default/objects/Open_Enrollment__c/validationRules/Only_on_VLTD_Enrollment_Per_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_on_VLTD_Enrollment_Per_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Case__r.Renewal_VLTD_Count__c   = 1,
ISNEW(),    ISPICKVAL(Product_Type__c, &quot;VLTD&quot;) 
)</errorConditionFormula>
    <errorMessage>OE002 - The case currently has a VLTD Renewal Enrollment, please navigate to the existing record and select edit.</errorMessage>
</ValidationRule>