unpackaged/main/default/objects/Open_Enrollment__c/validationRules/Only_on_VSTD_Enrollment_Per_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_on_VSTD_Enrollment_Per_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Case__r.Renewal_VSTD_Count__c   = 1,
ISNEW(),    ISPICKVAL(Product_Type__c, &quot;VSTD&quot;) 
)</errorConditionFormula>
    <errorMessage>OE003-The case currently has a VSTD Renewal Enrollment, please navigate to the existing record and select edit.</errorMessage>
</ValidationRule>