unpackaged/main/default/objects/Open_Enrollment__c/validationRules/Only_on_Worksite_CA_CI_Per_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_on_Worksite_CA_CI_Per_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Case__r.Renewal_Worksite_CA_CI_Count__c     = 1,
ISNEW(),    ISPICKVAL(Product_Type__c, &quot;Worksite CA &amp; CI&quot;) 
)</errorConditionFormula>
    <errorMessage>OE007 - The case currently has a Worksite CA &amp; CI Enrollment, please navigate to the existing record and select edit.</errorMessage>
</ValidationRule>