unpackaged/main/default/objects/Open_Enrollment__c/validationRules/Only_on_Worksite_HIP_Per_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_on_Worksite_HIP_Per_case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Case__r.Renewal_Worksite_HIP_Count__c     = 1,
ISNEW(),    ISPICKVAL(Product_Type__c, &quot;Worksite HIP&quot;) 
)</errorConditionFormula>
    <errorMessage>OE008 - The case currently has a Worksite HIP Enrollment, please navigate to the existing record and select edit.</errorMessage>
</ValidationRule>