unpackaged/main/default/objects/Open_Enrollment__c/listViews/Active_Open_Enrollment.listView-meta.xml
<ListView>
    <fullName>Active_Open_Enrollment</fullName>
    <columns>NAME</columns>
    <columns>Accepted_Enrollment__c</columns>
    <columns>Anniversary_Date__c</columns>
    <columns>Case__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Enrollment_Master_Group__c</columns>
    <columns>Enrollment_Start_Date__c</columns>
    <columns>Enrollment_End_Date__c</columns>
    <columns>Enrollment_Capture_Method__c</columns>
    <columns>Enrollment_Platform__c</columns>
    <columns>Starting_Premium__c</columns>
    <columns>Starting_Enrolled_Lives__c</columns>
    <columns>Final_Premium__c</columns>
    <columns>Final_Enrolled__c</columns>
    <columns>OE_Case_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OE_Case_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Closed/Spam,Duplicate and Closed</value>
    </filters>
    <label>Active Open Enrollment</label>
</ListView>